chore(docker): downgrade version to 2 and configure api service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
-version: "3"
+version: "2"
 
 services:
+  api:
+    build: ./api
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
   prediction:
     build: ./prediction
     ports:
